Implement viewer_count API
